feat: added repository and registered repo

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,7 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+./PlatformService/bin
+PlatformService/obj/Debug
+PlatformService/obj
