--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "CommandService": "http://localhost:5046/api/c/platforms"
 }
